# python-lua

./: .gitignore  Makefile  README.md  function.c  lua.c  lua.py  mkconst.c  module.cc  module.h  python-lua.7.ronn  setup.cfg  setup.py  table.c  test.py
debian/: changelog  control  copyright  python-lua.manpages  python3-lua.install  rules
debian/tests/: control  foo.lua  run  test
src/: test
src-c/: Makefile  lua.c  module.cc  module.h  setup.py  table.c  test.py
src/lua/: __init__.py  module.cc  python-lua.7
