[metadata]
name = lua-wrapper
version = 0.4
author = Bas Wijnen
author_email = wijnen@debian.org
description = module for using Lua in Python programs
long_description = file:README.md
long_description_content_type = text/markdown
license = AGPL3+
license_files =
        debian/copyright
url = https://github.com/wijnen/python-lua
project_urls =
        Bug Tracker = https://github.com/wijnen/python-lua/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
        Intended Audience :: Developers
        Development Status :: 4 - Beta
        Operating System :: OS Independent
include_package_data = True

[options]
package_dir =
        =src
packages = find:
python_requires = >=3

[options.packages.find]
where = src

[options.package_data]
* = python-lua.7
